force-app/main/default/objects/MedicineTrail__c/MedicineTrail__c.object-meta.xml
<CustomObject>
    <label>MedicineTrail</label>
    <nameField>
        <label>MedicineTrails Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>MedicineTrails</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>