force-app/main/default/objects/MedicineTrail__c/fields/MedicineID__c.field-meta.xml
<CustomField>
    <fullName>MedicineID__c</fullName>
    <displayFormat>MED-{0000}</displayFormat>
    <label>MedicineID</label>
    <type>AutoNumber</type>
</CustomField>