force-app/main/default/objects/MedicineTrail__c/fields/Trailphase__c.field-meta.xml
<CustomField>
    <fullName>Trailphase__c</fullName>
    <label>Trailphase</label>
    <length>50</length>
    <type>Text</type>
</CustomField>